components/component-c/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: my-big-application
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: component-c
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
  creationTimestamp: null
  name: elcomponent-c
  namespace: shbose
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-component-c
    weight: null
status: {}
